--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="style/style.css">
-    <title>Document</title>
+    <title>Flowery Greetings</title>
 </head>
 <body>
     <div class="container">
@@ -62,7 +62,7 @@
                         <div class="title-display msg">Happy Family Day</div>
                         <div>
                             <p class="greeting msg">Dear <span class="r-name-display">Ambreen</span></p>
-                            <p class="message-display msg">Family is the most precious and wonderful gift of God. Keep your family safe and take care of them. </p>
+                            <p class="message-display msg">Getting to celebrate this unique day with you is nothing but a pure blessing from the Lord. </p>
                         </div>
                         <div>
                             <p class="sender-greeting msg">Best Wishes,</p>
